# advent-of-code

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  README.md  chem-notes.md  devenv.nix  devenv.yaml  final-stats-review.md  pyproject.toml
2015/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
2020/Day 1/: main.py
2020/Day 2/: main.py
2020/Day 3/: main.py
2020/Day 4/: main.py
2021/: README.md
2021/Day 1/: CMakeLists.txt
2021/Day 11/: CMakeLists.txt  Point.h  main.cpp
2021/Day 2/: main.cpp
2021/Day 3/: CMakeLists.txt  main.cpp
2021/Day 4/: CMakeLists.txt  horizontal  main.cpp
2021/Day 5/: CMakeLists.txt
2021/Day 6/: CMakeLists.txt  LanternFish.cpp  main.cpp
2021/Day 7/: CMakeLists.txt  main.cpp
2021/Day 8/: main.cpp
2021/Day 9/: CMakeLists.txt
2021/day-1/: input.txt  main  main.cpp
2021/day-10/: CMakeLists.txt  main.cpp
2021/day-11/: Point.cpp  Point.h
2021/day-2/: CMakeLists.txt  main  main.cpp
2021/day-3/: main  main.cpp  temp.cpp
2021/day-4/: diagonal.txt  left-diagonal  main  main.cpp  test.txt  vertical.txt
2021/day-5/: Point.cpp  Point.h  input.txt  input1  main  main.cpp  test.txt  test2.txt
2021/day-5-clion/: CMakeLists.txt  Point.cpp  Point.h  main.cpp
2021/day-6/: CMakeLists.txt  LanternFish.h  main.cpp  old-main.cpp
2021/day-7/: CMakeLists.txt  main.cpp
2021/day-8/: CMakeLists.txt  main.cpp
2021/day-9/: main.cpp
2022/: 1.py  10.py  11.py  2.py  3.py  5.py  6.py  7.py  8.py  9.py  README.md
2022/day_1/: 1.go
2022/day_11/: 11.py
2024/: .gitignore  devenv.nix  pyproject.toml
(+11 files in other folders)
